text-indent not working on contenteditable elements in Safari 26.2 https://bugs.webkit.org/show_bug.cgi?id=307125 <rdar://problem/170280101>

Reviewed by Antti Koivisto.

1. text-indent relies on 'isFirstFormattedLineCandidate'
2. isFirstFormattedLineCandidate checks if there's a valid previousLine (std::optional<PreviousLine>

When partial layout starts from the first line (damage is either on the first or the second line), we should just have std::null_opt as PreviousLine.

Test: fast/text/partial-layout-with-text-indent.html

* LayoutTests/fast/text/partial-layout-with-text-indent-expected.html: Added.
* LayoutTests/fast/text/partial-layout-with-text-indent.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layout):

Canonical link: https://commits.webkit.org/307646@main